--- a/client/app/static/styles/main.scss
+++ b/client/app/static/styles/main.scss
@@ -1,168 +1,125 @@
 $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
+$fa-font-path: "../bower_components/font-awesome/fonts/";
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
+@import "font-awesome/scss/font-awesome.scss";
 
-.browsehappy {
-    margin: 0.21em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
+@import "http://fonts.googleapis.com/css?family=Roboto:400,600&subset=latin,latin-ext";
+
+html {
+
 }
 
-/*
- * Globals
- */
+body {
+    background: url(../images/background.jpg) no-repeat top center #0f0e2e;
+    margin: 0;
+    font-family: 'Roboto', sans-serif !important;
+    font-size: 15px;
+    line-height: 1.6;
+}
 
-/* Links */
-a,
-a:focus,
+#banner {
+    padding: 0px;
+}
+
+a {
+    color: #060606;
+    text-decoration: none;
+}
+
 a:hover {
-  color: #fff;
+    text-decoration: underline;
 }
 
-/* Custom default button */
-.btn-default,
-.btn-default:hover,
-.btn-default:focus {
-  color: #333;
-  text-shadow: none; /* Prevent inheritence from `body` */
-  background-color: #fff;
-  border: 1px solid #fff;
+.content {
+    width: 990px;
 }
 
-/*
- * Base structure
- */
-
-html,
-body {
-  height: 100%;
-  background-color: #333;
-}
-body {
-  color: #fff;
-  text-align: center;
-  text-shadow: 0 1px 3px rgba(0,0,0,.5);
+.container {
+    height: 100%;
 }
 
-/* Extra markup and styles for table-esque vertical and horizontal centering */
-.site-wrapper {
-  display: table;
-  width: 100%;
-  height: 100%; /* For at least Firefox */
-  min-height: 100%;
-  -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-          box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-}
-.site-wrapper-inner {
-  display: table-cell;
-  vertical-align: top;
-}
-.cover-container {
-  margin-right: auto;
-  margin-left: auto;
+#main {
+    background-color: white;
+    margin-left: 0px;
+    margin-right: 0px;
 }
 
-/* Padding for spacing */
-.inner {
-  padding: 30px;
+.row {
+    padding: 10px;
 }
 
-/*
- * Header
- */
-.masthead-brand {
-  margin-top: 10px;
-  margin-bottom: 10px;
+.hand {
+    cursor: pointer !important;
 }
 
-.masthead-nav > li {
-  display: inline-block;
-}
-.masthead-nav > li + li {
-  margin-left: 20px;
-}
-.masthead-nav > li > a {
-  padding-right: 0;
-  padding-left: 0;
-  font-size: 16px;
-  font-weight: bold;
-  color: #fff; /* IE8 proofing */
-  color: rgba(255,255,255,.75);
-  border-bottom: 2px solid transparent;
-}
-.masthead-nav > li > a:hover,
-.masthead-nav > li > a:focus {
-  background-color: transparent;
-  border-bottom-color: #a9a9a9;
-  border-bottom-color: rgba(255,255,255,.25);
-}
-.masthead-nav > .active > a,
-.masthead-nav > .active > a:hover,
-.masthead-nav > .active > a:focus {
-  color: #fff;
-  border-bottom-color: #fff;
+#logo {
+    font-size: 24px;
+    font-family: "Impact", "Tahoma", Arial, "Geneva", sans-serif;
+    padding: 40px 100px 70px 210px;
 }
 
-@media (min-width: 768px) {
-  .masthead-brand {
-    float: left;
-  }
-  .masthead-nav {
-    float: right;
-  }
+#logo a {
+    color: #FFFFFF;
+    text-decoration: none;
+    text-transform: uppercase;
 }
 
-/*
- * Cover
- */
-
-.cover {
-  padding: 0 20px;
-}
-.cover .btn-lg {
-  padding: 10px 20px;
-  font-weight: bold;
+#menu {
+    height: 40px;
+    text-align: center;
 }
 
-/*
- * Footer
- */
-
-.mastfoot {
-  color: #999; /* IE8 proofing */
-  color: rgba(255,255,255,.5);
+#menu a {
+    color: #060606;
+    font-size: 14px;
+    font-weight: bold;
+    text-decoration: none;
+    margin: 0 20px;
+    text-transform: lowercase;
 }
 
-/*
- * Affix and center
- */
-
-@media (min-width: 768px) {
-  /* Pull out the header and footer */
-  .masthead {
-    position: fixed;
-    top: 0;
-  }
-  .mastfoot {
-    position: fixed;
-    bottom: 0;
-  }
-  /* Start the vertical centering */
-  .site-wrapper-inner {
-    vertical-align: middle;
-  }
-  /* Handle the widths */
-  .masthead,
-  .mastfoot,
-  .cover-container {
-    width: 100%; /* Must be percentage or pixels for horizontal alignment */
-  }
+#menu a:hover {
+    color: #ED0677;
 }
 
-@media (min-width: 992px) {
-  .masthead,
-  .mastfoot,
-  .cover-container {
-    width: 700px;
-  }
+#main {
+    height: 100%;
+}
+
+#text {
+    margin: 10px 0 10px 40px;
+}
+
+#text ul {
+    padding: 0;
+    margin: 25px 0 10px 40px;
+}
+
+#text li {
+    list-style: none;
+    padding-left: 15px;
+}
+
+h1 {
+    margin: 20px 0 0 0;
+    text-transform: uppercase;
+    font-family: "Impact", "Tahoma", Arial, "Geneva", sans-serif;
+    font-size: 22px;
+    font-weight: normal;
+}
+
+#text p {
+    margin: 10px 0;
+}
+
+#sidebar {
+    background-color: white;
+    padding: 20px;
+    font-size: 14px !important;
+    font-weight: 600;
+}
+
+ul.scroll-area {
+    height: auto;
+    overflow-y: auto;
 }
